@@ -1,6 +1,5 @@
 package co.kirikiri.service;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.mockito.ArgumentMatchers.any;
@@ -41,6 +40,7 @@ import co.kirikiri.service.dto.roadmap.request.RoadmapSaveRequest;
 import co.kirikiri.service.dto.roadmap.request.RoadmapTagSaveRequest;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.Test;
@@ -48,12 +48,14 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.context.ApplicationEventPublisher;
 
 @ExtendWith(MockitoExtension.class)
 class RoadmapCreateServiceTest {
 
     private final Member member = new Member(1L, new Identifier("identifier1"),
             new EncryptedPassword(new Password("password1!")), new Nickname("닉네임"),
+            null,
             new MemberProfile(Gender.FEMALE, LocalDate.of(1999, 6, 8), "010-1234-5678"));
 
     @Mock
@@ -71,6 +73,9 @@ class RoadmapCreateServiceTest {
     @Mock
     private RoadmapCategoryRepository roadmapCategoryRepository;
 
+    @Mock
+    private ApplicationEventPublisher applicationEventPublisher;
+
     @InjectMocks
     private RoadmapCreateService roadmapService;
 
@@ -85,7 +90,7 @@ class RoadmapCreateServiceTest {
         final RoadmapCategory category = new RoadmapCategory(1L, "여가");
 
         final List<RoadmapNodeSaveRequest> roadmapNodes = List.of(
-                new RoadmapNodeSaveRequest("로드맵 노드1 제목", "로드맵 노드1 설명"));
+                new RoadmapNodeSaveRequest("로드맵 노드1 제목", "로드맵 노드1 설명", Collections.emptyList()));
         final List<RoadmapTagSaveRequest> roadmapTags = List.of(new RoadmapTagSaveRequest("태그 1"));
         final RoadmapSaveRequest request = new RoadmapSaveRequest(1L, roadmapTitle, roadmapIntroduction, roadmapContent,
                 difficulty, requiredPeriod, roadmapNodes, roadmapTags);
@@ -99,8 +104,7 @@ class RoadmapCreateServiceTest {
                 .thenReturn(Optional.of(member));
 
         // expect
-        assertThat(roadmapService.create(request, "identifier1"))
-                .isEqualTo(1L);
+        assertDoesNotThrow(() -> roadmapService.create(request, "identifier1"));
     }
 
     @Test
@@ -108,7 +112,7 @@ class RoadmapCreateServiceTest {
         // given
         final RoadmapSaveRequest request = new RoadmapSaveRequest(10L, "로드맵 제목", "로드맵 소개글", "로드맵 본문",
                 RoadmapDifficultyType.DIFFICULT, 30,
-                List.of(new RoadmapNodeSaveRequest("로드맵 노드1", "로드맵 노드1 설명")),
+                List.of(new RoadmapNodeSaveRequest("로드맵 노드1", "로드맵 노드1 설명", Collections.emptyList())),
                 List.of(new RoadmapTagSaveRequest("태그 1")));
 
         given(memberRepository.findByIdentifier(any()))
@@ -124,7 +128,7 @@ class RoadmapCreateServiceTest {
         // given
         final RoadmapSaveRequest request = new RoadmapSaveRequest(10L, "로드맵 제목", "로드맵 소개글", "로드맵 본문",
                 RoadmapDifficultyType.DIFFICULT, 30,
-                List.of(new RoadmapNodeSaveRequest("로드맵 노드1", "로드맵 노드1 설명")),
+                List.of(new RoadmapNodeSaveRequest("로드맵 노드1", "로드맵 노드1 설명", Collections.emptyList())),
                 List.of(new RoadmapTagSaveRequest("태그 1")));
 
         given(memberRepository.findByIdentifier(any()))
@@ -142,6 +146,7 @@ class RoadmapCreateServiceTest {
         // given
         final Member follower = new Member(2L, new Identifier("identifier2"),
                 new EncryptedPassword(new Password("password1!")), new Nickname("닉네임2"),
+                null,
                 new MemberProfile(Gender.FEMALE, LocalDate.of(1999, 6, 8), "010-1234-5678"));
 
         final RoadmapCategory category = new RoadmapCategory(1L, "운동");
@@ -204,6 +209,7 @@ class RoadmapCreateServiceTest {
         // given
         final Member follower = new Member(2L, new Identifier("identifier2"),
                 new EncryptedPassword(new Password("password1!")), new Nickname("닉네임2"),
+                null,
                 new MemberProfile(Gender.FEMALE, LocalDate.of(1999, 6, 8), "010-1234-5678"));
 
         final RoadmapCategory category = new RoadmapCategory(1L, "운동");
